# llm-decoding-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  word_lists.sample.txt
docs/: reproducibility.md  results.md  technical_overview.md
examples/: toy_decoder_demo.py
experiments/: __init__.py  generate.py  generate_constrained.py  generate_medusa.py  task0.py  task1.py  task2.py
src/llm_decoding_lab/: __init__.py  medusa.py  sampling.py  toy_lm.py  trie.py
tests/: test_medusa.py  test_pytorch_generators_optional.py  test_sampling.py  test_toy_lm.py  test_trie.py
