[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-decoding-lab"
version = "0.1.0"
description = "Earlier coursework on LLM decoding, constrained generation, and fast autoregressive inference."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
full = [
  "accelerate>=0.30",
  "datasets>=2.18",
  "evaluate>=0.4",
  "jaxtyping>=0.2",
  "numpy>=1.26",
  "rouge-score>=0.1",
  "sentencepiece>=0.2",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=4.40",
]

[tool.setuptools.packages.find]
where = ["src"]
